Fix cropper with mobile #35

--- a/src/app/content/classement/classement-save-server.component.scss
+++ b/src/app/content/classement/classement-save-server.component.scss
@@ -1,4 +1,8 @@
+@import '../../styles/cropper.scss';
+
 :host {
+    --cropper-image-radius: 0;
+
     padding: 0 10px;
     display: block;
 }
@@ -17,37 +21,7 @@ p {
     width: 200px;
 }
 
-.cropper-line {
-    display: flex;
-    align-items: center;
-    max-width: 800px;
-    width: 800px;
-
-    .cropper {
-        flex: 1;
-    }
-
-    .image {
-        width: 300px;
-
-        &:not(:first-child) {
-            margin: 15px;
-        }
-
-        img {
-            border: 1px solid #ccc;
-            box-shadow: 0 0 4px #888;
-        }
-    }
-}
-
 .public {
     text-align: center;
     margin: 20px 0 0;
-}
-
-.drop-image-zone {
-    background: var(--drop-image-zone-background);
-    padding: 0.02px 40px;
-    margin: 0 -40px;
 }
